--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <div
                     class="lg:w-1/3 p-6 bg-gray-50 rounded-xl shadow-lg flex flex-col items-center text-center border-b-4 border-sky-500">
                     <img class="w-32 h-32 rounded-full object-cover mb-4 ring-4 ring-sky-500/50"
-                        src="https://placehold.co/128x128/ccc/333?text=Sifu+P" alt="Instructor Profile Picture"
+                        src="https://placehold.co/128x128/ccc/333?text=Sifu+M" alt="Instructor Profile Picture"
                         onerror="this.onerror=null;this.src='https://placehold.co/128x128/ccc/333?text=Instructor';">
 
                     <h3 class="text-2xl font-bold text-gray-800">Sifu Michael Xie</h3>
@@ -331,7 +331,7 @@
     <!-- Footer -->
     <footer class="py-8 bg-gray-800 text-center text-gray-400">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <p class="mb-4 text-sm">&copy; 2025 SFTaichi.org. All Rights Reserved.</p>
+            <p class="mb-4 text-sm">&copy; 2025 SFTaiChi.org. All Rights Reserved.</p>
 
             <!-- Social Media Icons (using simple text placeholders) -->
             <div class="flex justify-center space-x-6 text-xl">
