--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
                     class="text-center p-8 bg-gray-50 rounded-xl shadow-lg hover:shadow-xl transition duration-300 border-t-4 border-teal-500">
                     <div class="text-5xl text-teal-500 mb-4">
                         <!-- Balance Icon -->
-                        <span role="img" aria-label="Balance">⚖️</span>
+                        <span role="img" aria-label="Relaxation">🧘</span>
                     </div>
                     <h3 class="text-2xl font-semibold mb-3">Improve Self Awareness</h3>
                     <p class="text-gray-600">
                         Develop heightened body awareness through slow, deliberate movements that make harmonious
-                        connection to the Chi which are movements in your mind and in your physical world.
+                        connection to the Chi which are all things alive in your mind and in your physical world.
                     </p>
                 </div>
 
@@ -111,16 +111,13 @@
                 <div
                     class="text-center p-8 bg-gray-50 rounded-xl shadow-lg hover:shadow-xl transition duration-300 border-t-4 border-teal-500">
                     <div class="text-5xl text-teal-500 mb-4">
-                        <!-- Stress Relief Icon -->
-                        <span role="img" aria-label="Relaxation">🧘</span>
+                        <!-- Energy Icon -->
+                        <span role="img" aria-label="Balance">⚖️</span>
                     </div>
-                    <h3 class="text-2xl font-semibold mb-3">Profound Stress Reduction</h3>
+                    <h3 class="text-2xl font-semibold mb-3">Enhanced Balance & Stability</h3>
                     <p class="text-gray-600">
-                        The meditative, continuous movements help you find your center of balance, listen, read, and
-                        cultivate the Chi, helping you manage anxiety and achieve mental clarity. Learn breathing
-                        techniques and movements to boost your body's natural energy flow, leading to improved vitality
-                        and
-                        focus.
+                        Strengthen your core and leg muscles, learn basic self defense moves, significantly reducing the
+                        risk of falls and improving overall body control and self confidence.
                     </p>
                 </div>
 
@@ -128,13 +125,15 @@
                 <div
                     class="text-center p-8 bg-gray-50 rounded-xl shadow-lg hover:shadow-xl transition duration-300 border-t-4 border-teal-500">
                     <div class="text-5xl text-teal-500 mb-4">
-                        <!-- Energy Icon -->
+                        <!-- Stress Relief Icon -->
                         <span role="img" aria-label="Energy">⚡</span>
                     </div>
-                    <h3 class="text-2xl font-semibold mb-3">Enhanced Balance & Stability</h3>
+                    <h3 class="text-2xl font-semibold mb-3">Profound Stress Reduction</h3>
                     <p class="text-gray-600">
-                        Strengthen your core and leg muscles, learn basic self defense moves, significantly reducing the
-                        risk of falls and improving overall body control and self confidence.
+                        The meditative, continuous movements help you find your center of balance, listen, read, and
+                        cultivate the Chi, helping you manage anxiety and achieve mental clarity. Learn breathing
+                        techniques and movements to boost your body's natural energy flow, leading to improved vitality
+                        and focus.
                     </p>
                 </div>
             </div>
