--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Hun Yuan Tai Chi - Find Your Balance in the Chi</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- 1. Import the @botpoison/browser script -->
+    <script src="https://unpkg.com/@botpoison/browser" async></script>
     <!-- Load Inter Font -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <style>
@@ -209,16 +211,12 @@
                                 <span class="font-medium">Monthly Membership</span>
                                 <span class="text-lg font-bold text-teal-800">$100 / month</span>
                             </li>
-                            <li class="flex justify-between items-center border-b pb-2">
-                                <span class="font-medium">QiGong Only</span>
-                                <span class="text-lg font-bold text-teal-800">$50 / month</span>
-                            </li>
                             <li class="flex justify-between items-center">
                                 <span class="font-medium">Drop-in Class</span>
-                                <span class="text-lg font-bold text-teal-800">$25</span>
+                                <span class="text-lg font-bold text-teal-800">$30</span>
                             </li>
                         </ul>
-                        <p class="mt-4 text-sm text-gray-500">Your first class is always free to try!</p>
+                        <p class="mt-4 text-sm text-gray-500">Your first class is free!</p>
                     </div>
 
                     <!-- Location Card -->
@@ -297,8 +295,7 @@
                 Have questions? Ready to reserve your spot? Fill out the form below.
             </p>
 
-            <!-- Simple Contact Form -->
-            <form action="#" method="POST" class="bg-white p-8 rounded-xl shadow-2xl">
+            <form action="https://submit-form.com/tzmhyGibM" data-botpoison-public-key="pk_f3e08bc0-5e6c-4047-ad66-ca81c8267072">
                 <div class="mb-4">
                     <input type="text" id="name" name="name" placeholder="Your Name"
                         class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-teal-500 focus:border-teal-500"
@@ -320,10 +317,6 @@
                     Send Message & Book Trial
                 </button>
             </form>
-
-            <p class="mt-8 text-sm text-gray-400">
-                You can also call us directly at (650) 228-3821
-            </p>
         </div>
     </section>
 
